# sqlite-cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/: sqlite3Config.cmake
